package io.silky;

public class SecondaryState extends State{
    @Override
    public Integer play() {
        return null;
    }

    @Override
    public double doubleScore(Integer value) {
        return 0;
    }

    @Override
    public void changeCards() {

    }

    @Override
    public void peekCards() {

    }
}
